se cambia sombra de texto

--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -362,7 +362,7 @@ transform: rotate(45deg);
     font-weight: 300;
     color: #4d4d4de5;
     font-style: italic;
-    text-shadow: 0 0 3px #00000082;
+    text-shadow: 1px 1px 1px #000000fc;
     letter-spacing: 3px;
     @include w1638 () {
       font-size: 1.8rem;
@@ -979,7 +979,7 @@ transform: rotate(45deg);
     font-weight: 300;
     color: #4d4d4de5;
     font-style: italic;
-    text-shadow: 0 0 3px #00000037;
+    text-shadow: 1px 1px 1px #000000fc;
     letter-spacing: 2px;
     border-left: 2.3px solid;
     padding-left: 15px;
@@ -1015,7 +1015,7 @@ transform: rotate(45deg);
     font-weight: 300;
     color: #4d4d4de5;
     font-style: italic;
-    text-shadow: 0 0 3px #00000037;
+    text-shadow: 1px 1px 1px #000000fc;
     letter-spacing: 3px;
     border-right: 2.3px solid;
     border-image: linear-gradient(to bottom, transparent 6% , rgba(0, 0, 0, 0.479) 6%, transparent);
