--- a/css/styles.css
+++ b/css/styles.css
@@ -719,7 +719,7 @@ h4 {
   font-weight: 300;
   color: rgba(77, 77, 77, 0.8980392157);
   font-style: italic;
-  text-shadow: 0 0 3px rgba(0, 0, 0, 0.5098039216);
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.9882352941);
   letter-spacing: 3px;
 }
 @media (max-width: 1638px) {
@@ -1411,7 +1411,7 @@ h4 {
   font-weight: 300;
   color: rgba(77, 77, 77, 0.8980392157);
   font-style: italic;
-  text-shadow: 0 0 3px rgba(0, 0, 0, 0.2156862745);
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.9882352941);
   letter-spacing: 2px;
   border-left: 2.3px solid;
   padding-left: 15px;
@@ -1453,7 +1453,7 @@ h4 {
   font-weight: 300;
   color: rgba(77, 77, 77, 0.8980392157);
   font-style: italic;
-  text-shadow: 0 0 3px rgba(0, 0, 0, 0.2156862745);
+  text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.9882352941);
   letter-spacing: 3px;
   border-right: 2.3px solid;
   border-image: linear-gradient(to bottom, transparent 6%, rgba(0, 0, 0, 0.479) 6%, transparent);
