--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -979,7 +979,6 @@ transform: rotate(45deg);
     font-weight: 300;
     color: #4d4d4de5;
     font-style: italic;
-    text-shadow: 1px 1px 1px #00000087;
     letter-spacing: 2px;
     border-left: 2.3px solid;
     padding-left: 15px;
@@ -1015,7 +1014,6 @@ transform: rotate(45deg);
     font-weight: 300;
     color: #4d4d4de5;
     font-style: italic;
-    text-shadow: 1px 1px 1px #00000087;
     letter-spacing: 3px;
     border-right: 2.3px solid;
     border-image: linear-gradient(to bottom, transparent 6% , rgba(0, 0, 0, 0.479) 6%, transparent);
@@ -1361,7 +1359,6 @@ transform: rotate(45deg);
       font-weight: 300;
       color: #4d4d4de5;
       font-style: italic;
-      text-shadow: 1px 1px 1px #00000087;
       letter-spacing: 3px;
       transform: translateY(15px);
       @include w670 () {
@@ -1613,6 +1610,9 @@ transform: rotate(45deg);
         }
         @include w990 () {
           font-size: 1rem;
+        }
+        @include w606 () {
+          font-size: 1.2rem;
         }
       }
     }
