--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -362,7 +362,7 @@ transform: rotate(45deg);
     font-weight: 300;
     color: #4d4d4de5;
     font-style: italic;
-    text-shadow: 1px 1px 1px #00000087;
+    text-shadow: 0 0 2px #000000;
     letter-spacing: 3px;
     @include w1638 () {
       font-size: 1.8rem;
