--- a/css/styles.css
+++ b/css/styles.css
@@ -717,9 +717,9 @@ h4 {
 .portada__frase {
   font-size: 2.1rem;
   font-weight: 300;
-  color: rgba(77, 77, 77, 0.8980392157);
+  color: rgba(42, 42, 42, 0.8980392157);
   font-style: italic;
-  text-shadow: 0 0 2px #000000;
+  text-shadow: 0 0 1px rgba(0, 0, 0, 0.6274509804);
   letter-spacing: 3px;
 }
 @media (max-width: 1638px) {
