--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -1310,18 +1310,22 @@ transform: rotate(45deg);
   
   &__item-2 { 
     background-image: url("../img/adri-felap.jpg");
+    order: 5;
   }
   
   &__item-3 { 
     background-image: url("../img/voz-adri.jpg");
+    order: 2;
   }
   
   &__item-4 { 
     background-image: url("../img/adri-mujer.jpg");
+    order: 1;
   }
   
   &__item-5 { 
     background-image: url("../img/adri-diploma.jpg");
+    order: 3;
     @include w860 () {
       p {
         opacity: 1;
